# bachelornordic

./: .gitignore  README.md
MOB_unit/: CMakeLists.txt  bachelornordic.code-workspace  prj.conf
MOB_unit/build_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  tfm_merged.hex
MOB_unit/build_1/modules/cmsis/: cmake_install.cmake
MOB_unit/build_1/modules/hal_nordic/: cmake_install.cmake
MOB_unit/build_1/modules/libmetal/: cmake_install.cmake
MOB_unit/build_1/modules/mcuboot/: cmake_install.cmake
MOB_unit/build_1/modules/nrf/: cmake_install.cmake
MOB_unit/build_1/modules/nrfxlib/: cmake_install.cmake
MOB_unit/build_1/modules/open-amp/: cmake_install.cmake
MOB_unit/build_1/modules/tinycrypt/: cmake_install.cmake
MOB_unit/build_1/tfm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  install_manifest.txt
MOB_unit/build_1/tfm/interface/: cmake_install.cmake
MOB_unit/build_1/tfm/platform/: cmake_install.cmake
MOB_unit/build_1/zephyr/: .cmake.dotconfig.checksum  .config.old  cmake_install.cmake  dev_handles.c  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd  linker_zephyr_pre1.cmd.dep  runners.yaml  tfm_nonsecure.hex  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map  zephyr_pre1.elf  zephyr_pre1.map
MOB_unit/src/: lte_gps.c  lte_gps.h  main.c
(+107 files in other folders)
